fix external links + fix spacing on projects grid in home

--- a/styles/Post.module.sass
+++ b/styles/Post.module.sass
@@ -56,6 +56,7 @@
     p
       // font-size: 20px
       font-size: 18px
+      font-size: 19px
       // line-height: 160%
       line-height: 165%
       margin-bottom: 30px
