--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -389,6 +389,7 @@ h1
     font-size: 54px
     font-size: 52px
     line-height: 125%
+    line-height: 130%
 
 h3
   font-size: 22px
@@ -419,5 +420,9 @@ h3
 
 .go-button
   font-size: 16px
-  color: var(--color-highlight)
   line-height: 160%
+  color: var(--color-text)
+  transition: all ease-in-out 0.3s
+  &:hover,
+  &:focus
+    color: var(--color-highlight)
