--- a/styles/parts/PresentationWrapper.module.sass
+++ b/styles/parts/PresentationWrapper.module.sass
@@ -29,6 +29,7 @@
   .presentationB
     .arrowWrapper
       svg.arrow
+        display: none
     .img
       height: 450px
       position: relative
@@ -45,7 +46,6 @@
     grid-template-columns: 1.25fr 0.75fr
     grid-template-columns: 1.27fr 0.73fr
     column-gap: 5vw
-    // margin-bottom: 56px
     margin-bottom: 62px
     .presentationA
       .heading
@@ -80,6 +80,7 @@
         padding-right: 6vw
         margin-bottom: 92px
         svg.arrow
+          display: inline-block
           width: 21px
           height: 56px
           path
