--- a/styles/parts/WorksGrid.module.sass
+++ b/styles/parts/WorksGrid.module.sass
@@ -20,6 +20,7 @@
         h3
           color: var(--color-highlight)
           font-weight: 600
+          transition: all ease-in-out 0.3s
         p
           max-width: 95%
           line-height: 140%
@@ -27,6 +28,7 @@
       &:focus
         .data
           h3
+            // color: var(--color-text)
           p
             color: var(--color-text)
 
